--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
-asgiref==3.2.10
-astroid==2.4.2
-Django==3.0.8
-djangorestframework==3.11.0
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-pylint==2.5.3
-pytz==2020.1
-six==1.15.0
-sqlparse==0.3.1
-toml==0.10.1
-typed-ast==1.4.1
+asgiref==3.6.0
+astroid==2.15.2
+dill==0.3.6
+Django==4.2
+djangorestframework==3.14.0
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+platformdirs==3.2.0
+pylint==2.17.2
+pytz==2023.3
+six==1.16.0
+sqlparse==0.4.3
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.7
+typed==0.6
+typing_extensions==4.5.0
 wrapt==1.12.1
