--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.6.0
 astroid==2.15.2
 dill==0.3.6
 Django==4.2
+django-filter==23.1
 djangorestframework==3.14.0
+gunicorn==20.0.4
 isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
@@ -16,4 +18,5 @@ tomli==2.0.1
 tomlkit==0.11.7
 typed==0.6
 typing_extensions==4.5.0
+validate-docbr==1.10.0
 wrapt==1.12.1
